--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">StreetPass</string>
+    <string name="chat_name">チャット</string>
     <string name="default_status_message">BLEに対応していない端末です。</string>
     <string name="send_receive_status_message">送受信可能です。</string>
     <string name="receive_status_message">受信のみ可能です。</string>
@@ -11,6 +12,8 @@
     <string name="no_name">Unnamed</string>
     <string name="start">開始</string>
     <string name="stop">停止</string>
+    <string name="send">送信</string>
+    <string name="send_message_edit_text_hint">なにか入れて、そうしん押して</string>
     <string name="versioin_title">バージョン</string>
     <string name="contact_title">連絡先</string>
     <string name="contact_message">email: origami.magic789@gmail.com\n\ntwitter: @gupuru</string>
@@ -19,4 +22,5 @@
     <string name="menu_version">バージョン</string>
     <string name="open_server_status_message">接続:OK</string>
     <string name="close_server_status_message">接続:NG</string>
+    <string name="cant_send_data">送信できます。</string>
 </resources>
